--- a/project_6_test.ipynb
+++ b/project_6_test.ipynb
@@ -24,7 +24,8 @@
     "from selenium.webdriver.support.select import Select\n",
     "from selenium.webdriver.chrome.options import Options\n",
     "from selenium.webdriver.common.action_chains import ActionChains\n",
-    "import pyautogui\n"
+    "import pyautogui\n",
+    "import module\n"
    ]
   },
   {
@@ -99,16 +100,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#續個打開搜尋結果\n",
-    "i= 1\n",
+    "\n",
     "# Find all elements with class name \"hfpxzc\"\n",
     "results = WebDriverWait(driver, 10).until(\n",
     "    EC.presence_of_all_elements_located((By.CLASS_NAME, \"hfpxzc\"))\n",
     ")\n",
-    "for result in results[0:i]:\n",
+    "#續個打開搜尋結果\n",
+    "for result in results:\n",
     "    # Simulate the key press of Ctrl (or Command on macOS) while clicking on the link\n",
     "    actions = ActionChains(driver)\n",
-    "    actions.key_down(Keys.CONTROL).click(result).key_up(Keys.CONTROL).perform()"
+    "    actions.key_down(Keys.CONTROL).click(result).key_up(Keys.CONTROL).perform()\n",
+    "    label = result.get_attribute(\"aria-label\")\n",
+    "    print(label)"
    ]
   },
   {
