--- a/project_6_test.ipynb
+++ b/project_6_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('Gmaps.json', 'r', encoding='utf-8') as f:\n",
+    "    data = json.load(f)\n",
+    "\n",
+    "# Convert the JSON data into a Pandas DataFrame\n",
+    "df = pd.DataFrame(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "visited = df[\"地點\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['府城台南美食', '府城台南美食', '府城台南美食', '府城台南美食', '府城台南美食', '府城台南美食', '府城台南美食', '府城台南美食', '府城台南美食', '府城台南美食', '(板橋)台南溫體牛肉湯', '(板橋)台南溫體牛肉湯', '(板橋)台南溫體牛肉湯', '(板橋)台南溫體牛肉湯', '(板橋)台南溫體牛肉湯', '(板橋)台南溫體牛肉湯', '(板橋)台南溫體牛肉湯', '(板橋)台南溫體牛肉湯', '(板橋)台南溫體牛肉湯', '(板橋)台南溫體牛肉湯', '津好吃台南浮水虱目魚羹', '津好吃台南浮水虱目魚羹', '津好吃台南浮水虱目魚羹', '津好吃台南浮水虱目魚羹', '津好吃台南浮水虱目魚羹', '津好吃台南浮水虱目魚羹', '津好吃台南浮水虱目魚羹', '津好吃台南浮水虱目魚羹', '津好吃台南浮水虱目魚羹', '津好吃台南浮水虱目魚羹']\n",
+      "['(板橋)台南溫體牛肉湯', '府城台南美食', '津好吃台南浮水虱目魚羹']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(list(visited))\n",
+    "visited = list(set(visited))\n",
+    "print(visited)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,9 +138,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "台南周氏冰鎮滷味(板橋店)\n",
+      "府城台南美食\n",
+      "(板橋)台南溫體牛肉湯\n",
+      "津好吃台南浮水虱目魚羹\n",
+      "台南𩵚魠魚焿\n",
+      "蕭台南溫體牛肉湯\n",
+      "台南無刺虱目魚系列專賣店\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# Find all elements with class name \"hfpxzc\"\n",
@@ -126,9 +182,7 @@
     "time.sleep(3)\n",
     "\n",
     "# 按\"評論\"\n",
-    "WebDriverWait(driver, 20).until(\n",
-    "    EC.element_to_be_clickable((By.XPATH, \"/html/body/div[3]/div[9]/div[9]/div/div/div[1]/div[2]/div/div[1]/div/div/div[3]/div/div/button[2]/div[2]/div[2]\"))\n",
-    "    ).click()\n",
+    "WebDriverWait(driver, 20).until(EC.element_to_be_clickable((By.XPATH, \"/html/body/div[3]/div[9]/div[9]/div/div/div[1]/div[2]/div/div[1]/div/div/div[3]/div/div/button[2]/div[2]/div[2]\"))).click()\n",
     "\n",
     "time.sleep(3)"
    ]
