completed check date

--- a/project_6_test.ipynb
+++ b/project_6_test.ipynb
@@ -52,6 +52,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "date = [\"兩年前\", \"三年前\"]\n",
+    "result_list = driver.get_elements(By.Class_Name, \"\")\n",
+    "if result_list[-1].text in date:\n",
+    "    print(\"date reached\")\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
    "outputs": [
