added check time

--- a/project_6_test.ipynb
+++ b/project_6_test.ipynb
@@ -38,21 +38,23 @@
     "    data = json.load(f)\n",
     "\n",
     "# Convert the JSON data into a Pandas DataFrame\n",
-    "df = pd.DataFrame(data)"
+    "df = pd.DataFrame(data)\n",
+    "visited = df[\"地點\"]\n",
+    "print(list(visited))\n",
+    "visited = list(set(visited))\n",
+    "print(visited)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "visited = df[\"地點\"]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -64,11 +66,7 @@
      ]
     }
    ],
-   "source": [
-    "print(list(visited))\n",
-    "visited = list(set(visited))\n",
-    "print(visited)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -163,10 +161,13 @@
     ")\n",
     "#續個打開搜尋結果\n",
     "for result in results:\n",
+    "    label = result.get_attribute(\"aria-label\")\n",
+    "    if label in visited:\n",
+    "        continue\n",
     "    # Simulate the key press of Ctrl (or Command on macOS) while clicking on the link\n",
     "    actions = ActionChains(driver)\n",
     "    actions.key_down(Keys.CONTROL).click(result).key_up(Keys.CONTROL).perform()\n",
-    "    label = result.get_attribute(\"aria-label\")\n",
+    "    \n",
     "    print(label)"
    ]
   },
@@ -215,6 +216,32 @@
     "for m in button:\n",
     "    if m.text == \"全文\":\n",
     "        m.click()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = [1,2,3,4,5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(test[-1:])"
    ]
   },
   {
