Finished get address

--- a/for_test.ipynb
+++ b/for_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,6 +86,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
@@ -121,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,20 +143,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "台南周氏冰鎮滷味(板橋店)\n",
-      "府城台南美食\n",
-      "(板橋)台南溫體牛肉湯\n",
-      "津好吃台南浮水虱目魚羹\n",
-      "台南𩵚魠魚焿\n",
-      "蕭台南溫體牛肉湯\n",
-      "台南無刺虱目魚系列專賣店\n"
+      "府城台南美食\n"
      ]
     }
    ],
@@ -160,10 +161,10 @@
     "    EC.presence_of_all_elements_located((By.CLASS_NAME, \"hfpxzc\"))\n",
     ")\n",
     "#續個打開搜尋結果\n",
-    "for result in results:\n",
+    "for result in results[:1]:\n",
     "    label = result.get_attribute(\"aria-label\")\n",
-    "    if label in visited:\n",
-    "        continue\n",
+    "    # if label in visited:\n",
+    "    #     continue\n",
     "    # Simulate the key press of Ctrl (or Command on macOS) while clicking on the link\n",
     "    actions = ActionChains(driver)\n",
     "    actions.key_down(Keys.CONTROL).click(result).key_up(Keys.CONTROL).perform()\n",
@@ -173,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,6 +187,16 @@
     "WebDriverWait(driver, 20).until(EC.element_to_be_clickable((By.XPATH, \"/html/body/div[3]/div[9]/div[9]/div/div/div[1]/div[2]/div/div[1]/div/div/div[3]/div/div/button[2]/div[2]/div[2]\"))).click()\n",
     "\n",
     "time.sleep(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "address = driver.find_element(By.CLASS_NAME, \"Io6YTe\").text\n",
+    "print(address)"
    ]
   },
   {
