--- a/for_test.ipynb
+++ b/for_test.ipynb
@@ -191,12 +191,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "220新北市板橋區新站路28號遠東大樓B1樓\n"
+     ]
+    }
+   ],
    "source": [
     "address = driver.find_element(By.CLASS_NAME, \"Io6YTe\").text\n",
     "print(address)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "yesyesyesyesyesyesyesyesyesyes"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10):\n",
+    "    print(\"yes\", end=\"\")\n",
+    "print(\"yes\",end = \"\")\n",
+    "print(\"yes\", end=\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "search_ammount = 10\n",
+    "scroll = search_ammount//7\n",
+    "print(scroll)"
    ]
   },
   {
