--- a/for_test.ipynb
+++ b/for_test.ipynb
@@ -209,14 +209,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "yesyesyesyesyesyesyesyesyesyes"
+      "yesyesyesyesyesyesyesyesyesyesyesyes"
      ]
     }
    ],
@@ -225,6 +225,36 @@
     "    print(\"yes\", end=\"\")\n",
     "print(\"yes\",end = \"\")\n",
     "print(\"yes\", end=\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [00:10<00:00,  9.87it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from tqdm import tqdm\n",
+    "import time\n",
+    "\n",
+    "for i in tqdm(range(100)):\n",
+    "    time.sleep(0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "driver.find"
    ]
   },
   {
