--- a/for_test.ipynb
+++ b/for_test.ipynb
@@ -39,18 +39,30 @@
     "\n",
     "# Convert the JSON data into a Pandas DataFrame\n",
     "df = pd.DataFrame(data)\n",
-    "visited = df[\"地點\"]\n",
-    "print(list(visited))\n",
-    "visited = list(set(visited))\n",
-    "print(visited)"
+    "df.to_csv(\"Gmaps.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20349\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('Gmaps.json', 'r', encoding='utf-8') as f:\n",
+    "    data = json.load(f)\n",
+    "\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "print(len(df[\"名字\"]))"
+   ]
   },
   {
    "cell_type": "code",
@@ -66,7 +78,9 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "\"\""
+   ]
   },
   {
    "cell_type": "code",
@@ -537,6 +551,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": []
@@ -571,7 +586,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4
  },
