--- a/for_test.ipynb
+++ b/for_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,14 +44,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20349\n"
+      "59119\n"
      ]
     }
    ],
@@ -79,7 +79,24 @@
     }
    ],
    "source": [
-    "\"\""
+    "import json\n",
+    "\n",
+    "# load the JSON data from a file\n",
+    "with open('Gmaps.json', 'r') as f:\n",
+    "    data = json.load(f)\n",
+    "\n",
+    "# loop through each element in the JSON array\n",
+    "for i in range(len(data)):\n",
+    "    # check if the value of \"地點\" is \"apple\"\n",
+    "    if data[i][\"地點\"] == \"尖叫 SCREAM 精緻炭火燒肉 台南旗艦店\":\n",
+    "        # remove the element if the condition is true\n",
+    "        del data[i]\n",
+    "        break  # break out of the loop after deleting the element\n",
+    "\n",
+    "# save the updated JSON data back to the file\n",
+    "with open('data.json', 'w') as f:\n",
+    "    json.dump(data, f, indent=2)\n",
+    "\n"
    ]
   },
   {
