--- a/for_test.ipynb
+++ b/for_test.ipynb
@@ -44,14 +44,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "59119\n"
+      "57119\n"
      ]
     }
    ],
@@ -66,36 +66,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['府城台南美食', '府城台南美食', '府城台南美食', '府城台南美食', '府城台南美食', '府城台南美食', '府城台南美食', '府城台南美食', '府城台南美食', '府城台南美食', '(板橋)台南溫體牛肉湯', '(板橋)台南溫體牛肉湯', '(板橋)台南溫體牛肉湯', '(板橋)台南溫體牛肉湯', '(板橋)台南溫體牛肉湯', '(板橋)台南溫體牛肉湯', '(板橋)台南溫體牛肉湯', '(板橋)台南溫體牛肉湯', '(板橋)台南溫體牛肉湯', '(板橋)台南溫體牛肉湯', '津好吃台南浮水虱目魚羹', '津好吃台南浮水虱目魚羹', '津好吃台南浮水虱目魚羹', '津好吃台南浮水虱目魚羹', '津好吃台南浮水虱目魚羹', '津好吃台南浮水虱目魚羹', '津好吃台南浮水虱目魚羹', '津好吃台南浮水虱目魚羹', '津好吃台南浮水虱目魚羹', '津好吃台南浮水虱目魚羹']\n",
-      "['(板橋)台南溫體牛肉湯', '府城台南美食', '津好吃台南浮水虱目魚羹']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# 刪除某地點的所有comments\n",
+    "\n",
     "import json\n",
     "\n",
     "# load the JSON data from a file\n",
-    "with open('Gmaps.json', 'r') as f:\n",
+    "with open('Gmaps.json', 'r', encoding='utf-8') as f:\n",
     "    data = json.load(f)\n",
     "\n",
     "# loop through each element in the JSON array\n",
-    "for i in range(len(data)):\n",
+    "for i in data[:]:\n",
     "    # check if the value of \"地點\" is \"apple\"\n",
-    "    if data[i][\"地點\"] == \"尖叫 SCREAM 精緻炭火燒肉 台南旗艦店\":\n",
-    "        # remove the element if the condition is true\n",
-    "        del data[i]\n",
-    "        break  # break out of the loop after deleting the element\n",
+    "    if i.get(\"地點\") == \"スシロー壽司郎 台南南紡店\":\n",
+    "        data.remove(i)\n",
     "\n",
     "# save the updated JSON data back to the file\n",
-    "with open('data.json', 'w') as f:\n",
-    "    json.dump(data, f, indent=2)\n",
+    "with open('Gmaps.json', 'w', encoding = 'utf-8') as f:\n",
+    "    json.dump(data, f, ensure_ascii=False)\n",
     "\n"
    ]
   },
