--- a/for_test.ipynb
+++ b/for_test.ipynb
@@ -44,14 +44,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "57119\n"
+      "57362\n"
      ]
     }
    ],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
     "# loop through each element in the JSON array\n",
     "for i in data[:]:\n",
     "    # check if the value of \"地點\" is \"apple\"\n",
-    "    if i.get(\"地點\") == \"スシロー壽司郎 台南南紡店\":\n",
+    "    if i.get(\"地點\") == \"尖叫 SCREAM 精緻炭火燒肉 台南旗艦店\":\n",
     "        data.remove(i)\n",
     "\n",
     "# save the updated JSON data back to the file\n",
